# lifetime-calc

./: .gitignore  3  lifetime-calc.cabal
app/: Main.hs
report/: fyp.bib  fyp.tex  go
report/tex/: ethics.tex  impl.tex  intro.tex  requirements.tex
src/: Borrow.hs  Lib.hs  Lifetime.hs  Parser.hs  Run.hs  Syntax.hs  Type.hs
test/: Spec.hs  UnitTests.hs
test_programs/borrow/: test1.calc
test_programs/lifetime/: test1.calc  test2.calc  test3.calc  test4.calc  test5.calc  test6.calc  test7.calc  test8.calc
